--- a/apps/front/i18n/cs.json
+++ b/apps/front/i18n/cs.json
@@ -113,7 +113,7 @@
     "register_label": "Registrovat se",
     "continue": "Pokračovat",
     "register_panel": {
-      "welcome": "Vítej v týmu!",
+      "welcome": "Vítej v týmu {{name}}!",
       "greeting": "Jsme rádi, že tě můžeme počítat mezi naše angažované uživatele!",
       "mail_confirmation_strong": "Z důvodu ověření pravosti tvého účtu, prosím, potvrď svou e-mailovou adresu. ",
       "mail_confirmation": " Stačí jedno kliknutí. Klikni na aktivační odkaz, který ti byl zaslán na adresu: {{mail}}",
@@ -180,7 +180,7 @@
         "the_field_[password]_is_missing": "Pole {{label}} je povinné.",
         "invalid_postal_code": "PSČ musí obsahovat 5 číslic.",
         "invalid_privacy_policy": "Musíš přijmout Datové zásady.",
-        "invalid_postal_code_dynamic": "{{Label}} musí obsahovat 5 číslic.",
+        "invalid_postal_code_dynamic": "{{label}} musí obsahovat 5 číslic.",
         "submit_success": "Změna byla uložena.",
         "malformed": "Respektuj formát adresy URL „https://example.com“"
       }
@@ -302,8 +302,10 @@
     "associated_proposals_few": "{{count}} související návrhy",
     "associated_proposals_other": "{{count}} souvisejících návrhů",
     "position_one": "{{ count }} stanovisko",
+    "position_few": "",
     "position_other": "{{ count }} stanoviska/stanovisek",
     "candidate_one": " kandidát tohoto nápadu.",
+    "candidate_few": "",
     "candidate_other": " kandidáti/ů tohoto nápadu.",
     "open": "Zobrazit skóre nápadu",
     "close": "Skrýt skóre nápadu",
@@ -443,13 +445,13 @@
       "back_authentication": "Vrátit se na přihlašovací obrazovku"
     },
     "success": {
-      "title": "Děkujeme!",
+      "title": "Děkujeme {{name}}!",
       "description": "Tvůj návrh je nyní pracováván našimi týmy moderátorů.",
       "button": "Pokračovat v hlasování",
       "other_idea": "Mám jiný nápad",
       "tooltip_title": "Je zpracováván",
       "tooltip_description": "Tvůj návrh bude našimi týmy zpracován do 48 hodin, zatím ho můžeš najít ve svém profilu.",
-      "grats": "Gratulujeme, ",
+      "grats": "Gratulujeme {{name}}, ",
       "proposal_sent": "tvůj návrh byl odeslán ",
       "activate": "Z důvodu ověření pravosti tvého účtu, prosím, potvrď svou e-mailovou adresu. ",
       "link": "Stačí jedno kliknutí. Klikni na aktivační odkaz, který ti byl zaslán na adresu: {{mail}}",
@@ -811,6 +813,7 @@
       "start_date": "Datum zahájení",
       "end_date": "Datum ukončení konzultace",
       "remaining_one": "Zbývající den",
+      "remaining_few": "",
       "remaining_other": "Zbývající dny",
       "participant_one": "účastník/nice",
       "participant_few": "účastníci/e",
@@ -1064,9 +1067,9 @@
       "contributors_one": "účastník/nice",
       "contributors_few": "účastníci/e",
       "contributors_other": "účastníků/ič",
-      "proposals_one": "{{count}} návrh",
-      "proposals_few": "{{count}} návrhy",
-      "proposals_other": "{{count}} návrhů",
+      "proposals_one": "návrh",
+      "proposals_few": "návrhy",
+      "proposals_other": "návrhů",
       "votes_one": "hlas",
       "votes_few": "hlasy",
       "votes_other": "hlasů",
